# Medley-discord

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/commands/: help.rs
