[package]
name = "medley_discord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
env_logger = "0.10.0"
poise = "0.5.6"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "rt"] }
log = "0.4.20"
thiserror = "1.0.49"
